# who-cares-test-unwrap

./: Cargo.toml  README.md
crates/macro/: Cargo.toml
crates/who_cares/: Cargo.toml  who_cares.rs
crates/who_cares/examples/: std_io.rs
crates/who_cares/tests/: attribute.rs  macro.rs  usage.rs
examples/: anyhow_result.rs  attribute_macro.rs  serde_json_result.rs
src/: lib.rs
tests/: behavior.rs
who_cares_macros/: Cargo.toml
who_cares_macros/src/: lib.rs
