[package]
name = "who_cares_macros"
version = "0.0.0"
edition = "2024"
description = "Attribute macros for who_cares."
repository = "https://github.com/Natural-selection1/who-cares-test-unwrap"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
