[package]
name = "who_cares"
version.workspace = true
edition.workspace = true
description = "Nightly-only test helper for using ? as unwrap-style control flow in tests."
readme = "../../README.md"
repository.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[[test]]
name = "macro"
path = "tests/macro.rs"
required-features = ["macro"]

[dependencies]
who_cares_macros = { path = "../macro", version = "*", optional = true }

[dev-dependencies]
anyhow = "1.0.102"
serde_json = "1.0.150"

[features]
default = []
macro = ["dep:who_cares_macros"]
